Tests for contacts removal from groups, birthday page list were added. Improved code of other tests.